<resources>
    <string name="app_name">BinLookup</string>
    <string name="card_scheme">Card Scheme</string>
    <string name="card_type">Card Type</string>
    <string name="bank">Bank</string>
    <string name="country">Country</string>
    <string name="card_number_length">Card Number Length</string>
    <string name="prepaid_or_postpaid">Prepaid OR Postpaid</string>
    <string name="card_country">%s %s</string>
    <string name="prepaid">Prepaid</string>
    <string name="postpaid">Postpaid</string>
    <string name="error_title">Something Went Wrong</string>
    <string name="first_6_to_9_digits">First 6 to 9 digits</string>
</resources>